2003-07-17  Rainer Orth  <ro@TechFak.Uni-Bielefeld.DE>

	* scripts/amd.conf-sample: Remove obsolete comment.

2003-07-16  Erez Zadok  <ezk@cs.sunysb.edu>

	* amd/info_file.c (read_line): check for errors from fgets().
	Although rare, they can occur upon disk or network failures.
	Patch from Nick Williams <Nick.Williams@morganstanley.com>.

2003-07-16  Rainer Orth  <ro@TechFak.Uni-Bielefeld.DE>

	* BUGS (Solaris 8): Update patch revisions, mention old autofs
	patches, fix filenames and rpcgen command.

2003-07-15  Erez Zadok  <ezk@agora.fsl.cs.sunysb.edu>

	* doc/am-utils.texi (map_defaults Parameter): document new
	map_defaults option.

	* scripts/amd.conf.5: document new map_defaults option.

	* scripts/amd.conf-sample (map_type): show examples of new
	map_defaults option.

	* amd/mapc.c (mapc_create): initialize mnt_map->cfm field to NULL.

	* amd/get_args.c (get_args): call process_all_regular_maps().

	* amd/conf.c: keep head and tail of cfm list.
	(init_cf_map): reworked reset_cf_map.  This one doesn't reset a
	globaly reused cfm, but rather just inherits [global] options.
	(set_conf_kv): just store global/map options without actually
	creating any mnt_map's.  Essentially, we now parse the whole
	amd.conf file, and then try to process the maps one at a time.
	(process_one_regular_map): new function to process one map, just
	renamed from process_regular_map.
	(process_all_regular_maps): new exported function to process all
	maps.  No need for hacky process_last_map().
	(find_cf_map): new exported function to return a cf_map_t given a
	map's mount point (e.g., /home or /net).

	* amd/amfs_generic.c (amfs_parse_defaults): find if amd.conf
	specificed a map_defaults for a given map.  If so, use that
	instead of the /defaults that came from the map itself.  Also
	restructure code a bit so it's not one huge long "if" statement.

	HACK ALERT: there's no easy way to find out what the map mount
	point is at this point, so I am forced to initialize the